[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "aliked"
version = "1.0.0"
description = "ALIKED: A Lighter Keypoint and Descriptor Extraction Network via Deformable Transformation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Xiaoming Zhao"}
]
keywords = ["keypoint detection", "descriptor extraction", "computer vision", "feature matching"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/Shiaoming/ALIKED"
Repository = "https://github.com/Shiaoming/ALIKED"

[tool.setuptools]
packages = ["nets", "custom_ops"]

[tool.setuptools.package-data]
"*" = ["*.pth"]
